# npw

./: .gitignore  Cargo.toml  README.md  backend_bg.wasm  credits.html  index.html  local_storage.html  manual.html  npw.html
.github/workflows/: web.yml
assets/: Modal-02d2d440.css  Modal-6e1401b9.css  Modal.svelte_svelte_type_style_lang-14adb101.js  Modal.svelte_svelte_type_style_lang-84866f51.js  all-26f50df8.css  all.min-27c24b68.js  all.min-425d561d.js  all.min-4ad144fa.js  all.min-ae0e25ed.js  all.min-b0f4767c.js  all.min-d148fa3e.js  all.min-d4de7573.js  backend_bg-09b3fcfd.wasm  backend_bg-0b46959e.wasm  backend_bg-0d7688a7.wasm  backend_bg-0d9a2c56.wasm  backend_bg-0dfbfb58.wasm  backend_bg-0ea8d643.wasm  backend_bg-0fc5959d.wasm  backend_bg-12a608d9.wasm  backend_bg-137cf421.wasm  backend_bg-146f0276.wasm  backend_bg-1472d65b.wasm  backend_bg-1854e39a.wasm  backend_bg-19e865de.wasm  backend_bg-1b363f1e.wasm  backend_bg-1f3ab8cd.wasm  backend_bg-204a1fae.wasm  backend_bg-280a53ab.wasm  backend_bg-2b3cd676.wasm  backend_bg-2f3ae003.wasm  backend_bg-33976326.wasm  backend_bg-3cccb05b.wasm  backend_bg-3daf1cbe.wasm  backend_bg-3ed9812e.wasm  backend_bg-43815311.wasm  backend_bg-43f64047.wasm  backend_bg-488b943c.wasm  backend_bg-4cd4b4c0.wasm  backend_bg-5618c921.wasm  (+1505 more)
backend/: Cargo.toml
backend/src/: costs.rs  disconnected.rs  evaluate.rs  existing.rs  join_lines.rs  level_of_service.rs  lib.rs  main.rs  mesh_density.rs  od.rs  places.rs  planar_graph.rs  precalculated_flow.rs  reachable.rs  route_snapper.rs  routes.rs  split_lines.rs  stats.rs  uptake.rs  utils.rs  wasm.rs
cli/: Cargo.toml  england.sh  one_area.sh  scotland.sh
cli/src/: cn.rs  common.rs  disconnected.rs  england.rs  main.rs  match_lines.rs  scotland.rs
cli/src/scotland/: mod.rs  pois.rs
data_prep/: README.md  boundaries.geojson  build_all_areas.sh  get_input_data.sh  manifest  reference_layers.sh
data_prep/england/: README.md  build_all_areas.sh  get_input.sh
data_prep/scotland/: build_all_areas.sh  combine_baseline_stats.py  get_input_data.sh
demo/: index.html  local_storage.html  npw.html
demo/assets/: backend_bg-25fdc54c.wasm  backend_bg-7f285d20.wasm  backend_bg-cdb82a53.wasm  backend_bg-cebd2246.wasm  backend_bg-e01d5b1d.wasm  boundaries-c02eb905.geojson  files-7254d1b1.js  index-02d5c56c.js  index-0db48b62.css  index-1a4071ee.js  index-365f3575.js  index-71b86c1b.css  index-8c2730e0.js  index-938e5d53.js  index-b4c1abf9.css  index-bc95a06c.js  index-c4d583dc.css  index-efe4fcf0.js  index-ff862811.js  local_storage-373998d2.css  local_storage-5df1aecc.js  local_storage-aef137fa.js  local_storage-ed3fc0e1.js  npw-1df05577.js  npw-21cae25f.css  npw-28464aec.css  npw-39747c15.js  npw-8760f7f8.js  npw-924b7120.js  npw-981fd904.css  npw-a8e89590.js  npw-bb94136d.js  npw-cadf3543.js  npw-e53f9681.js  stores-11953dee.js  stores-8096f4cf.css  stores-febbc656.js  worker-181cbab1.js  worker-22020eae.js  worker-52d7fba7.js  (+3 more)
demo_may6/: credits.html  index.html  local_storage.html  manual.html  npw.html
demo_may6/assets/: Modal-806a9e05.css  all-4eca87fd.css  all.min-c12b95fd.js  credits-dbd9453b.js  files-db96c124.js  index-0f963003.js  index-3149f9d6.css  index-5e3292c2.js  index-9f65ea44.css  index-d1fc1cc6.js  local_storage-0d0532b4.js  npw-d7aaaee7.js  worker-1abc30c6.js
nptless_demo/: index.html  local_storage.html  npw.html
nptless_demo/assets/: backend_bg-435487b5.wasm  backend_bg-bfd61af3.wasm  files-ef316d1e.js  index-1e573d13.js  index-365a83f0.js  index-960374f4.css  index-9d52065b.css  npw-1dbbe5eb.js  npw-441af826.js  npw-4db8e23e.js  npw-7518e13c.css  worker-bf9d25f9.js  worker-fa0be0ff.js
problems-api/: README.md  package-lock.json  package.json  schema.sql  wrangler.jsonc
problems-api/src/: index.ts
release/: cloudflare_build.sh  gh_build.sh
web/: credits.html  index.html  local_storage.html  manual.html  npw.html  package-lock.json  package.json  vite.config.ts
web/assets/: README.md  boundaries.geojson
web/manual/: index.md
web/src/: App.svelte  AssessMode.svelte  BulkEditMode.svelte  ChangeArea.svelte  ChooseArea.svelte  CleanLocalStorage.svelte  Credits.svelte  DebugMeshDensityMode.svelte  DebugMode.svelte  DebugNetworkMode.svelte  DebugODMode.svelte  DebugWorstRoutesMode.svelte  Directions.svelte  EditRouteMode.svelte  EvaluateJourneyMode.svelte  EvaluateODMode.svelte  EvaluateRouteMode.svelte  ExportMode.svelte  ImportRouteMode.svelte  LocalAccessMode.svelte  MainMode.svelte  NewProject.svelte  OverviewMode.svelte  PickInfraType.svelte  RouteDetailsMode.svelte  SetupMode.svelte  SketchRouteMode.svelte  Stats.svelte  TopBar.svelte  backfill.ts  colors.ts  stores.ts  style.css  types.ts  utils.ts  worker.ts  worker_wrapper.ts
web/src/assess/: AssessMode.svelte  DirectnessNetworkControls.svelte  DirectnessNetworkMap.svelte  Disconnections.svelte  FinalReport.svelte  MeshDensity.svelte  ODBreakdowns.svelte  ODStats.svelte  Population.svelte  PrintableReport.svelte  ReportContents.svelte  Streetspace.svelte  index.ts
web/src/common/: BackLink.svelte  Beta.svelte  Checkbox.svelte  DisableInteractiveLayers.svelte  DrawRectangle.svelte  Geocoder.svelte  HelpButton.svelte  InfraTypeLegend.svelte  Legend.svelte  LegendWithToggles.svelte  Loading.svelte  LoadingSpinner.svelte  ManageFiles.svelte  Modal.svelte  PrevNext.svelte  QualitativeLegend.svelte  Radio.svelte  ReportProblemMap.svelte  ReportProblemModal.svelte  RoadStyle.svelte  RouteLegend.svelte  SettlementPicker.svelte  StreetView.svelte  SwitchBasemap.svelte  basemap.ts  files.ts  index.ts  zorder.ts
web/src/edit/: AllSections.svelte  EditRouteAttributesMode.svelte  EditRouteGeometryMode.svelte  EditRouteMode.svelte  ExplainLoS.svelte  ExplainSSE.svelte  GradientSectionDiagram.svelte  InfraTypeSectionDiagram.svelte  PickInfraType.svelte  ReviewSectionsMode.svelte  RouteControls.svelte  SectionDiagram.svelte  stores.ts
web/src/layers/: AllControls.svelte  AllPopulation.svelte  AreaMeshDensity.svelte  CalculatedRouteNetwork.svelte  Controls.svelte  CoreNetwork.svelte  CyclingDemandCoverage.svelte  (+36 more)
(+65 files in other folders)
