[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
chrono = { version = "0.4.33", default-features = false }
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
enum-map = "2.7.3"
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
graph = { git = "https://github.com/a-b-street/15m" }
i_overlay = { version = "1.7.0", default-features = false }
i_float = "1.3.1"
js-sys = "0.3.69"
log = "0.4.20"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
route-snapper-graph = { git = "https://github.com/dabreegster/route_snapper" }
rstar = { version = "0.12.0", features = ["serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["console"] }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
