[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
ckmeans = "1.0.6"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
enum-map = "2.7.3"
geo = { workspace = true }
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
graph = { workspace = true }
js-sys = "0.3.69"
log = { workspace = true }
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
petgraph = "0.7.1"
rstar = { version = "0.12.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["console"] }
