[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
backend = { path = "../backend" }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
geo = "0.29.1"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
gdal = "0.17.1"
graph = { git = "https://github.com/a-b-street/15m" }
log = "0.4.20"
rstar = "0.12.0"
serde = "1.0.188"
simple_logger = "5.0.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
serde_json = "1.0.133"
