[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anime = { git = "https://github.com/dabreegster/anime", branch="update_geo" }
anyhow = "1.0.82"
bincode = "1.3.3"
backend = { path = "../backend" }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
elevation = { git = "https://github.com/dabreegster/elevation" }
geo = { git = "https://github.com/georust/geo", branch="mkirk/geo-buffer" }
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
gdal = "0.18.0"
graph = { git = "https://github.com/a-b-street/15m" }
hilbert_2d = "1.1.0"
log = "0.4.20"
petgraph = "0.7.1"
rstar = { version = "0.12.0", features = ["serde"] }
serde = "1.0.188"
simple_logger = "5.0.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
serde_json = "1.0.133"
geo-types = "0.7.16"
