[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anime = { git = "https://github.com/dabreegster/anime", branch="update_geo" }
anyhow = { workspace = true }
bincode = { workspace = true }
backend = { path = "../backend" }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
elevation = { git = "https://github.com/dabreegster/elevation" }
fs-err = "3.1.0"
geo = { workspace = true }
geo-types = "0.7.16"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
gdal = "0.18.0"
graph = { workspace = true }
hilbert_2d = "1.1.0"
log = { workspace = true }
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
petgraph = "0.7.1"
rstar = { version = "0.12.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
simple_logger = "5.0.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
